--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,7 @@
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import "../../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
@@ -11922,6 +11923,12 @@ nav {
   font-family: "Satisfy", cursive;
   font-weight: 400;
   font-style: normal;
+}
+
+.disdis {
+  display: flex;
+  gap: 50px;
+  background-color: #fffaf3;
 }
 
 /*# sourceMappingURL=app.css.map */
