--- a/src/sass/modules/home/_About.sass
+++ b/src/sass/modules/home/_About.sass
@@ -2,3 +2,52 @@
     display: flex
     gap: 50px
     background-color: #fffaf3
+    padding-top: 50px
+
+.leabout
+
+    display: flex
+    flex-direction: column
+    align-items: center
+    padding-top: 90px
+    h2
+        &::after         
+            content: 'Our Restaurant'
+            color: rgb(255, 176, 59)
+
+.leaboutmin1
+    display: flex
+    flex-direction: column
+    align-items: center
+    width: 100vh
+    p
+        text-align: center
+
+.leabb
+    display: flex
+    gap: 20px
+    padding-left: 80px
+    padding-right: 80px
+    padding-top: 30px
+    
+
+.lili
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px
+    padding: 30px
+    padding-top:40px 
+    transition: 0.5s
+    h1
+        color: #ffb03b
+    &:hover
+        padding-top: 10px
+        background-color:  #ffb03b
+        color: #fff
+        h1
+            color: #fff
+        h4
+            color: #fff
+        p
+            color: white
+
+    
+
