--- a/src/sass/modules/home/_About.sass
+++ b/src/sass/modules/home/_About.sass
@@ -1,4 +1,4 @@
-.disdis
+#disdis
     display: flex
     gap: 50px
     background-color: #fffaf3
@@ -28,7 +28,7 @@
     gap: 20px
     padding-left: 80px
     padding-right: 80px
-    padding-top: 30px
+    padding-top: 20px
     
 
 .lili
