--- a/src/sass/_allmodules.sass
+++ b/src/sass/_allmodules.sass
@@ -1,2 +1,5 @@
 @import ./modules/home/_About
 @import ./modules/home/_nav
+@import ./modules/home/_Menu
+@import ./modules/home/_Specials
+@import ./modules/home/_Events
