--- a/src/sass/modules/home/_About.sass
+++ b/src/sass/modules/home/_About.sass
@@ -12,7 +12,7 @@
     padding-top: 90px
     h2
         &::after         
-            content: 'Our Restaurant'
+            content: 'Event'
             color: rgb(255, 176, 59)
 
 .leaboutmin1
