--- a/src/sass/modules/home/_About.sass
+++ b/src/sass/modules/home/_About.sass
@@ -3,6 +3,8 @@
     gap: 50px
     background-color: #fffaf3
     padding-top: 50px
+    h1
+        font-family: face
 
 .leabout
 
@@ -11,6 +13,7 @@
     align-items: center
     padding-top: 90px
     h2
+        font-family: face
         &::after         
             content: 'Event'
             color: rgb(255, 176, 59)
@@ -38,6 +41,8 @@
     transition: 0.5s
     h1
         color: #ffb03b
+    h4
+        font-family: face
     &:hover
         padding-top: 10px
         background-color:  #ffb03b
@@ -45,6 +50,7 @@
         h1
             color: #fff
         h4
+            
             color: #fff
         p
             color: white
