--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11855,12 +11855,18 @@ textarea.form-control-lg {
   background-color: #fffaf3;
   padding-top: 50px;
 }
+#disdis h1, #disdis .h1 {
+  font-family: face;
+}
 
 .leabout {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 90px;
+}
+.leabout h2, .leabout .h2 {
+  font-family: face;
 }
 .leabout h2::after, .leabout .h2::after {
   content: "Event";
@@ -11893,6 +11899,9 @@ textarea.form-control-lg {
 }
 .lili h1, .lili .h1 {
   color: #ffb03b;
+}
+.lili h4, .lili .h4 {
+  font-family: face;
 }
 .lili:hover {
   padding-top: 10px;
@@ -12084,6 +12093,35 @@ section h2 span, section .h2 span {
 .inputclass form {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 30px 10px;
+}
+
+.Gal1 {
+  text-align: center;
+}
+.Gal1 span {
+  color: rgba(255, 160, 18, 0.897);
+}
+.Gal1 h2, .Gal1 .h2 {
+  font-family: face;
+}
+
+.Gal2 {
+  text-align: center;
+}
+
+.gallerys1 {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  padding-bottom: 10px;
+  transition: transform 0.2s;
+}
+.gallerys1 .ggll {
+  overflow: hidden;
+}
+.gallerys1 .ggll img:hover {
+  scale: 1.3;
+  transition: 0.3s;
 }
 
 /*# sourceMappingURL=app.css.map */
