--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12124,4 +12124,48 @@ section h2 span, section .h2 span {
   transition: 0.3s;
 }
 
+#contacttype p {
+  text-align: center;
+}
+#contacttype h3, #contacttype .h3 {
+  font-family: face;
+  text-align: center;
+}
+#contacttype h3 span, #contacttype .h3 span {
+  color: rgba(255, 160, 18, 0.897);
+}
+
+.lighncontact {
+  display: flex;
+  justify-content: center;
+  gap: 80px;
+}
+.lighncontact .copy {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+.lighncontact .copy i {
+  border-radius: 50%;
+  transition: 0.3s;
+  padding: 15px;
+  color: rgba(255, 160, 18, 0.634);
+  background-color: #fff6d3;
+}
+.lighncontact .copy i:hover {
+  color: white;
+  background-color: rgba(255, 160, 18, 0.897);
+}
+
+.grand {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+
+.mgrand {
+  padding-top: 50px;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
 /*# sourceMappingURL=app.css.map */
