--- a/src/sass/modules/home/_contact.sass
+++ b/src/sass/modules/home/_contact.sass
@@ -11,6 +11,16 @@
     display: flex
     justify-content: center
     gap: 80px
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+    text-align: center
+    padding-top: 50px
+    padding-right: 50px
+    padding-left: 50px
+.grand
+    width: 80vw
+    padding-top: 40px
+    padding-bottom: 40px
+    
     
     .copy
         display: flex
@@ -26,13 +36,46 @@
                 color: white
                 background-color: rgba(255, 160, 18, 0.897)
 
-.grand
-    
+
+.full2
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
     text-align: center
-
-.mgrand
     padding-top: 50px
     padding-right: 50px
     padding-left: 50px
-           
+    .fullfi
+        display: flex
+        gap: 2vw
+        textarea
+            width: 62vw
+            padding: 1vh 1vw
+    
+
+
+.formf
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+    gap: 2vh
+    input
+        width: 30vw
+        padding: 1vh 1vw
+
+.inputinput
+    width: 62vw
+    padding: 1vh 1vw
+
+        
+
+
+.buttbut
+    text-align: center
+    button
+        height: 40px
+        width: 150px
+        color: white
+        border-radius: 20px
+        background-color: rgba(255, 160, 18, 0.897)
+        border: none
+        &:hover
+            background-color: rgb(255, 160, 18)
