--- a/src/sass/modules/home/_contact.sass
+++ b/src/sass/modules/home/_contact.sass
@@ -17,15 +17,16 @@
     padding-right: 50px
     padding-left: 50px
 .grand
-    width: 80vw
+    width: 90vw
     padding-top: 40px
     padding-bottom: 40px
+    padding-left: 15vw
     
     
     .copy
         display: flex
         align-items: center
-        gap: 40px
+        gap: 10px
         i
             border-radius: 50%
             transition: 0.3s
@@ -41,10 +42,12 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
     text-align: center
     padding-top: 50px
+    padding-bottom: 30px
     padding-right: 50px
     padding-left: 50px
     .fullfi
         display: flex
+        flex-direction: column
         gap: 2vw
         textarea
             width: 62vw
@@ -55,7 +58,7 @@
 .formf
     display: flex
     justify-content: center
-    flex-wrap: wrap
+    
     gap: 2vh
     input
         width: 30vw
@@ -79,3 +82,41 @@
         border: none
         &:hover
             background-color: rgb(255, 160, 18)
+
+footer
+    background-color: rgb(53, 50, 45)
+    padding-top: 30px
+    display: flex
+    flex-direction: column
+    gap: 30px
+    p
+        color: white
+
+
+
+    .f3
+        span
+            color: rgb(255, 160, 18)
+    h1
+        text-align: center
+        color: rgb(255, 160, 18)
+    p
+        text-align: center
+
+    .d2
+        display: flex
+        justify-content: center
+        gap: 5px
+        .d1
+            color: white
+            border-radius: 50%
+            display: flex
+            align-items: center
+            justify-content: center
+            width: 50px
+            height: 50px
+            text-align: center
+            background-color: gray
+            transition: 0.3s
+            &:hover
+                background-color: rgb(255, 160, 18)
