--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12124,6 +12124,9 @@ section h2 span, section .h2 span {
   transition: 0.3s;
 }
 
+#contacttype {
+  padding-top: 40px;
+}
 #contacttype p {
   text-align: center;
 }
@@ -12256,6 +12259,26 @@ footer .d2 .d1 {
 }
 footer .d2 .d1:hover {
   background-color: rgb(255, 160, 18);
+}
+
+.cheffs {
+  background-image: url(../img/chefs-bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100vh;
+  color: black;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+.cheffs::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(226, 192, 192);
+  opacity: 0.5;
 }
 
 /*# sourceMappingURL=app.css.map */
