--- a/src/sass/modules/home/_chefs.sass
+++ b/src/sass/modules/home/_chefs.sass
@@ -15,3 +15,18 @@
         height: 100%
         background: rgb(226, 192, 192)
         opacity: 0.5
+
+.carou
+    background-image: url(../img/testimonials-bg.jpg)
+    background-size: cover
+    height: 100vh
+
+.cars
+    display: flex
+    flex-direction: column
+    justify-content: center
+    text-align: center
+    img
+        border-radius: 50%
+        text-align: center
+        margin: auto
