--- a/src/sass/modules/home/_contact.sass
+++ b/src/sass/modules/home/_contact.sass
@@ -85,6 +85,8 @@
             background-color: rgb(255, 160, 18)
 
 footer
+    h1
+        font-family: face
     background-color: rgb(53, 50, 45)
     padding-top: 30px
     display: flex
@@ -121,3 +123,20 @@ footer
             transition: 0.3s
             &:hover
                 background-color: rgb(255, 160, 18)
+
+
+.fixed
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 50px
+    background-color: orange
+    height: 50px
+    position: fixed
+    bottom: 0px
+    right: 0
+    z-index: 99999999
+    border-radius: 50%
+
+    i
+        color: white
