--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11999,6 +11999,45 @@ nav {
   font-style: normal;
 }
 
+.loup span {
+  color: black;
+}
+
+#menuu {
+  padding-bottom: 50px;
+}
+#menuu .menu1 {
+  display: flex;
+  gap: 20px;
+  padding-left: 70vh;
+  padding-top: 20vh;
+  padding-bottom: 10vh;
+}
+#menuu button {
+  border: solid orange 2px;
+  border-radius: 20px;
+  background-color: white;
+  color: black;
+}
+#menuu button:hover {
+  color: white;
+  background-color: orange;
+}
+
+.M1 {
+  display: flex;
+  gap: 30px;
+  padding-left: 40vh;
+}
+
+.bigmenu {
+  padding-top: 30px;
+  font-family: face;
+}
+.bigmenu span {
+  color: orange;
+}
+
 #SPEC1 {
   padding: 50px 0;
 }
@@ -12255,6 +12294,9 @@ footer {
   flex-direction: column;
   gap: 30px;
 }
+footer h1, footer .h1 {
+  font-family: face;
+}
 footer p {
   color: white;
 }
@@ -12287,6 +12329,23 @@ footer .d2 .d1 {
 }
 footer .d2 .d1:hover {
   background-color: rgb(255, 160, 18);
+}
+
+.fixed {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  background-color: orange;
+  height: 50px;
+  position: fixed;
+  bottom: 0px;
+  right: 0;
+  z-index: 99999999;
+  border-radius: 50%;
+}
+.fixed i {
+  color: white;
 }
 
 .cheffs {
@@ -12327,6 +12386,10 @@ footer .d2 .d1:hover {
   margin: auto;
 }
 
+#chefchef h3, #chefchef .h3 {
+  font-family: face;
+}
+
 #SPEC1 {
   padding: 50px 0;
 }
@@ -12353,6 +12416,45 @@ footer .d2 .d1:hover {
 }
 #SPEC1 a:hover {
   color: #ffb03b;
+}
+
+.loup span {
+  color: black;
+}
+
+#menuu {
+  padding-bottom: 50px;
+}
+#menuu .menu1 {
+  display: flex;
+  gap: 20px;
+  padding-left: 70vh;
+  padding-top: 20vh;
+  padding-bottom: 10vh;
+}
+#menuu button {
+  border: solid orange 2px;
+  border-radius: 20px;
+  background-color: white;
+  color: black;
+}
+#menuu button:hover {
+  color: white;
+  background-color: orange;
+}
+
+.M1 {
+  display: flex;
+  gap: 30px;
+  padding-left: 40vh;
+}
+
+.bigmenu {
+  padding-top: 30px;
+  font-family: face;
+}
+.bigmenu span {
+  color: orange;
 }
 
 /*# sourceMappingURL=app.css.map */
