--- a/src/sass/modules/home/_About.sass
+++ b/src/sass/modules/home/_About.sass
@@ -56,4 +56,21 @@
             color: white
 
     
+@media  ( max-width: 428px )
+    .leabb
+        display: flex
+        flex-direction: column
+
+
+
+    #home-i
+        img
+            height: 700px
+
+    #disdis
+        display: flex
+        flex-direction: column
+        video
+            width: 425px
+        
 
