--- a/src/sass/modules/home/_Menu.sass
+++ b/src/sass/modules/home/_Menu.sass
@@ -30,3 +30,9 @@
     font-family: face
     span
         color: orange
+
+@media  ( max-width: 428px )
+    .menu1
+        display: flex
+        flex-direction: row
+    
